@@ -1,6 +1,7 @@
 Akeeba Data Compliance 1.2.3
 ================================================================================
 + CLI tool to replay the audit log
++ Custom error pages when FEF is not installed or an unhandled PHP exception occurred
 ~ Update path to cacert.pem
 ~ Use Joomla's domain name when setting the cookie acceptance, er, cookie
 ~ Banner links to EU sites should have rel="noopener"
